--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Cadiboo's projects
-subtitle: The home of my GitHub projects
+subtitle: The home of my projects and other programming endeavours
 use-site-title: true
 ---
