--- a/stuff/seized.html
+++ b/stuff/seized.html
@@ -7,19 +7,40 @@
 				margin-right: auto;
 				width: 25%;
 			}
-			.headerMain {
+			.common {
 				text-align: center;
 				font-family: sans-serif;
+				padding-bottom: 0;
+				margin-bottom: 0;
+				/*Looks too nice, we want a stark look*/
+				/*color: #454545*/
+			}
+			.headerMain {
+				margin-bottom: 0.25em;
 			}
 			.siezedBy {
-				text-align: center;
-				font-family: sans-serif;
+				font-weight: bold;
+			}
+			.link {
+				font-size: 130%;
+			}
+			/* Coppied from https://thebestmotherfucking.website */
+			a:visited {
+				color: #941352;
+			}
+			a {
+				color: #07a;
 			}
 		</style>
 	</head>
 	<body>
 		<img src="https://stopmodreposts.org/assets/img/ZoI2D6yH_400x400.png" class="center"/>
-		<h1 class="headerMain">THIS DOMAIN HAS BEEN SEIZED</h1>
-		<span class="siezedBy">by the StopModReposts Project in accordance with a seizure warrant obtained from all</span>
+		<h1 class="common headerMain">THIS DOMAIN HAS BEEN SEIZED</h1>
+		<div class="common siezedBy">by the StopModReposts Project in accordance with</div>
+		<div class="common siezedBy">a seizure warrant obtained from the StopModReposts Project</div>
+		<div class="common siezedBy">on behalf of all affected Modders and issued after multiple</div>
+		<div class="common siezedBy">DMCA (Digital Millennium Copyright Act) complaints against the</div>
+		<div class="common siezedBy">offending site were submitted by said Modders.</div>
+		<div class="common siezedBy link"><a href="https://stopmodreposts.org">https://stopmodreposts.org</a></div>
 	</body>
 </html>
