--- a/stuff/seized.html
+++ b/stuff/seized.html
@@ -1,5 +1,9 @@
 <html>
 	<head>
+		<title>Domain Seized</title>
+		<meta name="description" content="THIS DOMAIN HAS BEEN SEIZED">
+		<meta name="keywords" content="StopModReposts,9minecraft,Modders,DMCA,
+		Digital Millennium Copyright Act">
 		<style type="text/css">
 			.center {
 				display: block;
